      (Closes: #715035)
  * lib/Lintian/Data.pm:
    + [NT] Remove references to LINTIAN_ROOT as Lintian::Data
      no longer uses it.
  * lib/Lintian/Path.pm:
    + [NT] Rework some implementation details to reduce memory
      consumption slightly.
    + [NT] The undocumented "type" method has been removed from
      the API.  It was an implementation detail that has now
      changed.

  * reporting/templates:
    + [NT] Remove (uses of) the "invisible-anchor" css class as
      invisible (display: none) elements cannot be used as
      anchors.

 -- Niels Thykier <niels@thykier.net>  Thu, 09 Jul 2015 21:50:53 +0200

lintian (2.5.33) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - systemd-no-service-for-init-rcS-script
      - trailing-slash-for-dpkg-maintscript-helper-symlink_to_dir
    + Removed:
      - binary-file-compressed-with-upx

  * checks/binaries.pm:
    + [NT] Ignore "v5" suffixes in package names when matching
      SONAMES with package names.  The "v5" suffix is the
      recommended suffix for packages affected by the GCC-5
      libstc++6 C11 ABI breakage.
    + [NT] Drop binary-file-compressed-with-upx as it was not
      working.  (Closes: #790932)
  * checks/cruft.pm:
    + [BR] Increase windows size to 16384 bytes.
      Gain about 10% in cruft.
  * checks/description.desc:
    + [NT] Clarify that the empty-line control statement " ."
      permits no other characters on the same line. Thanks
      to Riley Baird for the report.  (Closes: #789577)
  * checks/files.desc:
    + [JW, NT] Clarify that the ISO 639-1 language codes are
      preferred to the ISO 639-2 variant.  Thanks to Jonas
      Smedegaard for the report.  (Closes: #790693)
  * checks/infofiles.pm:
    + [NT] Fix use of undefined variable in some cases.
  * checks/scripts.{desc,pm}:
    + [BR] Detects problem with dpkg-maintscript-helper symlink_to_dir.
  * checks/systemd.{desc,pm}:
    + [NT] Apply patches from Felipe Sateler to refactor the